--- a/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
+++ b/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
@@ -4,21 +4,18 @@
     <img class='w-32 mt-4 mx-auto' src='assets/png/auth/change_password.png' alt='change_password'/>
     <p class='mt-4 text-gray-500' *ngIf='!isShowOldPassword'>{{ 'modal.change_password.instruction' | translate }}</p>
     <moc-field *ngIf='isShowOldPassword'
-               [formControl]='formGroup.controls.oldPassword'
+               [control]='formGroup.controls.oldPassword'
                [placeholder]='"modal.change_password.old_password_placeholder" | translate'
                label='modal.change_password.old_password'
-               ngDefaultControl
                type='password'></moc-field>
-    <moc-field [formControl]='formGroup.controls.newPassword'
+    <moc-field [control]='formGroup.controls.newPassword'
                [placeholder]='"modal.change_password.new_password_placeholder" | translate'
                label='modal.change_password.new_password'
-               ngDefaultControl
                type='password'></moc-field>
     <moc-field [selfClass]='isPasswordNotMatch ? "invalid" : ""'
-               [formControl]='formGroup.controls.confirmPassword'
+               [control]='formGroup.controls.confirmPassword'
                [placeholder]='"modal.change_password.confirm_password_placeholder" | translate'
                label='modal.change_password.confirm_password'
-               ngDefaultControl
                type='password'></moc-field>
     <p *ngIf='isPasswordNotMatch'
        class='text-red text-center mt-2'>{{ 'modal.change_password.password_not_match' | translate }}</p>
