--- a/mocker-front/src/app/shared/component/button/button.component.scss
+++ b/mocker-front/src/app/shared/component/button/button.component.scss
@@ -1,3 +1,5 @@
+@import 'variable-color';
+
 #main {
   .btn-primary {
     @apply text-white;
@@ -7,4 +9,9 @@
   .btn-light {
     @apply bg-white border text-black;
   }
+
+  .invalid {
+    border: 1px solid $invalid-color !important;
+  }
+
 }
