--- a/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
+++ b/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
@@ -3,9 +3,8 @@
     <img src='assets/png/logo.png' alt='logo' class='w-44 mx-auto'/>
     <p class='font-bold mt-5 text-primary-bold'>{{ 'component.forget_password.title' | translate }}</p>
     <p class='text-left mt-4'>{{ 'component.forget_password.instruction' | translate }}</p>
-    <moc-field [formControl]='username'
+    <moc-field [control]='username'
                [placeholder]='"component.forget_password.email_address_placeholder" | translate'
-               ngDefaultControl
                class='mt-2'
                selfClass='{{ isNotExistedUsername ? "invalid" : "" }} mt-2'
                type='email'></moc-field>
