--- a/mocker-front/src/app/component/auth/component/sign-in/sign-in.component.html
+++ b/mocker-front/src/app/component/auth/component/sign-in/sign-in.component.html
@@ -2,14 +2,12 @@
   <div class='bg-white rounded drop-shadow-2xl text-sm text-center p-10' [formGroup]='formGroup'>
     <img src='assets/png/logo.png' alt='logo' class='w-44 mx-auto'/>
     <p class='font-bold mt-5 text-primary-bold'>{{ 'component.sign_in.title' | translate }}</p>
-    <moc-field [formControl]='formGroup.controls.username'
+    <moc-field [control]='formGroup.controls.username'
                [placeholder]='"component.sign_in.username_placeholder" | translate'
-               ngDefaultControl
                selfClass='mt-2'
                type='email'></moc-field>
-    <moc-field [formControl]='formGroup.controls.password'
+    <moc-field [control]='formGroup.controls.password'
                [placeholder]='"component.sign_in.password_placeholder" | translate'
-               ngDefaultControl
                selfClass='mt-2'
                type='password'></moc-field>
     <p class='mt-4 text-red' *ngIf='invalidAuth'>{{ 'component.sign_in.invalid_auth' | translate }}</p>
