--- a/mocker-front/src/app/component/auth/modal/verification/verification.modal.html
+++ b/mocker-front/src/app/component/auth/modal/verification/verification.modal.html
@@ -4,10 +4,10 @@
     <img class='w-32 mt-4 mx-auto' src='assets/png/auth/email.svg' alt='email'/>
     <p class='mt-4 text-gray-500'>{{ 'modal.verification.instruction' | translate }}</p>
     <p class='mt-2 font-medium'>{{ options ? options.username : undefined }}</p>
-    <moc-field [formControl]='verificationCode'
+    <moc-field [control]='verificationCode'
                [placeholder]='"modal.verification.verification_code_placeholder" | translate'
                [selfClass]='isInvalidVerificationCode ? "invalid" : ""'
-               ngDefaultControl></moc-field>
+               ></moc-field>
     <p *ngIf='isInvalidVerificationCode'
        class='text-red text-center mt-2'>{{ 'modal.verification.invalid_verification_code' | translate }}</p>
     <hr class='mt-4'/>
