--- a/mocker-front/src/app/component/people/component/person/person.component.html
+++ b/mocker-front/src/app/component/people/component/person/person.component.html
@@ -3,7 +3,7 @@
   <div class='mt-5 flex justify-between'>
     <div class='p-5 panel border rounded'>
       <p class='font-medium'>{{ 'component.person.my_email' | translate }}</p>
-      <moc-field type='email' ngDefaultControl [formControl]='formGroup.controls.username' class='mt-5'></moc-field>
+      <moc-field type='email' [control]='formGroup.controls.username' class='mt-5'></moc-field>
       <p *ngIf='isExistedUsername'
          class='text-red text-center mt-2'>{{ 'component.sign_up.exist_username' | translate }}</p>
       <moc-button class='mt-3 text-right'
@@ -19,7 +19,7 @@
   <div class='mt-5 flex justify-between'>
     <div class='p-5 panel border rounded'>
       <p class='font-medium'>{{ 'component.person.my_api_key' | translate }}</p>
-      <moc-field ngDefaultControl [formControl]='formGroup.controls.apiKey' class='mt-5'></moc-field>
+      <moc-field [control]='formGroup.controls.apiKey' class='mt-5'></moc-field>
       <p class='mt-3'>{{ 'You have used 0 of the maximum requests allowed by the free tier in the last 24 hours.' }}</p>
       <moc-button class='mt-8 text-right' selfClass='w-52 btn-primary'
                   label='component.person.generate_new_api_key'></moc-button>
