--- a/mocker-front/src/app/shared/component/button/button.component.html
+++ b/mocker-front/src/app/shared/component/button/button.component.html
@@ -1,8 +1,12 @@
 <div id='main' class='{{ class }}'>
   <button
     [style]='styles'
-    class='{{ selfClass }} p-2.5 rounded font-medium w-full hover:drop-shadow-md relative'>
+    (click)='clicked=true'
+    class='{{ selfClass }} {{ isValidated && control && control.invalid ? "invalid" : "" }} p-2.5 rounded font-medium w-full hover:drop-shadow-md relative'>
     {{ label | translate }}
     <i *ngIf='icon' class='{{ !label ? "" : "absolute right-5 top-1/2 -translate-y-1/2" }} {{ icon }}'></i>
   </button>
+  <div *ngIf='isValidated && control && control.invalid'>
+    <moc-error-message-processor [error]='control.errors'></moc-error-message-processor>
+  </div>
 </div>
