--- a/mocker-front/src/app/shared/component/table-detail/table-detail.component.html
+++ b/mocker-front/src/app/shared/component/table-detail/table-detail.component.html
@@ -11,31 +11,35 @@
     <tbody formArrayName='fields' *ngFor='let field of formGroup.controls.fields.controls; let i = index;'>
     <tr [formGroupName]='i'>
       <td class='w-1/4 px-3 py-1.5 align-top'>
-        <moc-field ngDefaultControl selfClass='px-5'
-                   [formControl]='field.controls.fieldName'
+        <moc-field selfClass='px-5'
+                   [control]='field.controls.name'
                    [placeholder]='"component.table.field_name_placeholder" | translate'></moc-field>
       </td>
       <td class='w-1/4 px-3 py-1.5 align-top'>
         <moc-button icon='fa-solid fa-arrow-up-arrow-down'
                     (click)='chooseType(field.controls.generateType, true)'
+                    [control]='field.controls.generateType'
                     selfClass='text-left px-5 btn-light {{ !field.controls.generateType.value ? "text-gray-400 !font-normal" : "" }}'
-                    [label]='field.controls.generateType.value?.code || "Generate Type"'></moc-button>
+                    [label]='field.controls.generateType.value?.code || "Generate Type"'>
+        </moc-button>
       </td>
       <td class='w-1/4 px-3 py-1.5 align-top'>
         <moc-button icon='fa-solid fa-arrow-up-arrow-down'
                     (click)='chooseType(field.controls.sqlType, false)'
+                    [control]='field.controls.sqlType'
                     selfClass='text-left px-5 btn-light {{ !field.controls.sqlType.value ? "text-gray-400 !font-normal" : "" }}'
-                    [label]='field.controls.sqlType.value?.code || "Sql Type"'></moc-button>
+                    [label]='field.controls.sqlType.value?.code || "Sql Type"'>
+        </moc-button>
       </td>
       <td class='w-1/4 px-3 py-1.5 align-top'>
         <div class='flex justify-evenly'>
           <p class='self-center'>{{ 'Blank:' }}</p>
-          <moc-field class='w-20' placeholder='0%' ngDefaultControl
+          <moc-field class='w-20' placeholder='0%'
                      type='number'
                      [min]='0'
                      [max]='100'
                      selfClass='text-center'
-                     [formControl]='field.controls.option.controls.blank'></moc-field>
+                     [control]='field.controls.option.controls.blank'></moc-field>
           <moc-button icon='fa-solid fa-sigma' class='w-12'
                       selfClass='btn-light h-10'></moc-button>
           <i (click)='removeField(i)' class='text-lg cursor-pointer fa-regular fa-circle-xmark self-center'></i>
