MOC-14: [FE] Configure generate date of table component.

--- a/mocker-front/src/app/component/general/component/general/general.component.html
+++ b/mocker-front/src/app/component/general/component/general/general.component.html
@@ -13,6 +13,9 @@
                     [label]='formGroup.controls.format.value'></moc-button>
       </ng-template>
     </moc-action>
+    <span *ngIf='isShowTableNameField' class='mx-5'>{{ 'component.general.table_name' | translate }}</span>
+    <moc-field *ngIf='isShowTableNameField' class='w-32' selfClass='px-5'
+               [control]='formGroup.controls.tableName'></moc-field>
   </div>
   <hr class='mt-5'/>
   <div class='mt-5 flex'>
