MOC-15: [FE] UI and Perform action download.

--- a/mocker-front/src/app/app.component.html
+++ b/mocker-front/src/app/app.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet>
-<moc-loading *ngIf='appConfigService.loading'></moc-loading>
+<moc-loading *ngIf='appConfigService.loading.value'></moc-loading>
