--- a/mocker-front/src/app/component/general/component/general/general.component.html
+++ b/mocker-front/src/app/component/general/component/general/general.component.html
@@ -2,24 +2,23 @@
   <moc-description class='mt-5' [description]='"component.general.introduction" | translate'></moc-description>
   <moc-table-detail [table]='formGroup.controls.table' class='mt-16'></moc-table-detail>
   <hr class='mt-5'/>
-  <div class='flex items-center mt-5' [formGroup]='formGroup'>
-    <span class='mr-5'>{{ 'component.general.row' | translate }}</span>
-    <moc-field class='w-32' selfClass='text-right px-5'
+  <div class='flex mt-5' [formGroup]='formGroup'>
+    <span class='mt-3 mr-5'>{{ 'component.general.row' | translate }}</span>
+    <moc-field class='w-24' selfClass='px-5'
                [control]='formGroup.controls.rows'></moc-field>
-    <span class='mx-5'>{{ 'component.general.format' | translate }}</span>
-    <moc-action [self]='self' [actions]='supportedFormat'>
-      <ng-template #self>
-        <moc-button class='w-32' icon='fa-solid fa-arrow-up-arrow-down' selfClass='text-left btn-light'
-                    [label]='formGroup.controls.format.value'></moc-button>
-      </ng-template>
+    <span class='mt-3 mx-5'>{{ 'component.general.format' | translate }}</span>
+    <moc-action [actions]='supportedFormat'>
+      <moc-button class='w-32' icon='fa-solid fa-arrow-up-arrow-down' selfClass='text-left btn-light'
+                  [label]='formGroup.controls.format.value'></moc-button>
     </moc-action>
-    <span *ngIf='isShowTableNameField' class='mx-5'>{{ 'component.general.table_name' | translate }}</span>
+    <span *ngIf='isShowTableNameField' class='mt-3 mx-5'>{{ 'component.general.table_name' | translate }}</span>
     <moc-field *ngIf='isShowTableNameField' class='w-32' selfClass='px-5'
                [control]='formGroup.controls.tableName'></moc-field>
   </div>
   <hr class='mt-5'/>
   <div class='mt-5 flex'>
-    <moc-button (click)='download()' class='w-52' label='component.general.download_data' selfClass='btn-primary'></moc-button>
+    <moc-button (click)='download()' class='w-52' label='component.general.download_data'
+                selfClass='btn-primary'></moc-button>
     <moc-button class='w-52 ml-3' label='component.general.preview'
                 selfClass='px-5 btn-light'></moc-button>
     <moc-button class='w-52 ml-3' label='component.general.save_this_table'
