--- a/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -22,13 +22,11 @@
       <div class='hover:bg-blue-50 w-9 h-9 flex justify-center items-center rounded-full ml-3 cursor-pointer'>
         <i class='fa-regular fa-bell'></i>
       </div>
-      <moc-action [self]='self' [header]='header' [actions]='actions'>
-        <ng-template #self>
-          <div
-            class='hover:bg-blue-50 w-9 h-9 flex justify-center items-center rounded-full ml-3 cursor-pointer relative'>
-            <img [src]='avatarUrl' alt='avatar' class='icon rounded-full'/>
-          </div>
-        </ng-template>
+      <moc-action [header]='header' [actions]='actions'>
+        <div
+          class='hover:bg-blue-50 w-9 h-9 flex justify-center items-center rounded-full ml-3 cursor-pointer relative'>
+          <img [src]='avatarUrl' alt='avatar' class='icon rounded-full'/>
+        </div>
         <ng-template #header>
           <div class='bg-blue-bold px-4 py-2.5 flex items-center text-white text-sm'>
             <div class='w-7 h-7 bg-white flex justify-center items-center rounded-full'>
