--- a/mocker-front/src/app/shared/component/field/field.component.html
+++ b/mocker-front/src/app/shared/component/field/field.component.html
@@ -3,7 +3,7 @@
   <div class='relative'>
     <input #inputElement
            [formControl]='control'
-           [placeholder]='placeholder'
+           [placeholder]='placeholder || ""'
            [style]='styles'
            [type]='type'
            [min]='min'
