--- a/mocker-front/src/app/component/general/component/general/general.component.html
+++ b/mocker-front/src/app/component/general/component/general/general.component.html
@@ -19,7 +19,7 @@
   <div class='mt-5 flex'>
     <moc-button (click)='download()' class='w-52' label='component.general.download_data'
                 selfClass='btn-primary'></moc-button>
-    <moc-button class='w-52 ml-3' label='component.general.preview'
+    <moc-button (click)='preview()' class='w-52 ml-3' label='component.general.preview'
                 selfClass='px-5 btn-light'></moc-button>
     <moc-button class='w-52 ml-3' label='component.general.save_this_table'
                 selfClass='px-5 btn-light'></moc-button>
