MOC-20: [FE] Create customize CSS for using in TailwinCss.

--- a/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
+++ b/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
@@ -1,7 +1,7 @@
 <div id='main' class='w-screen h-screen center-box'>
   <div class='bg-white rounded drop-shadow-2xl text-sm text-center p-10'>
     <img src='assets/png/logo.png' alt='logo' class='w-44 mx-auto'/>
-    <p class='font-bold mt-5 text-primary-bold'>{{ 'component.forget_password.title' | translate }}</p>
+    <p class='font-bold mt-5 text-primary-solid'>{{ 'component.forget_password.title' | translate }}</p>
     <p class='text-left mt-4'>{{ 'component.forget_password.instruction' | translate }}</p>
     <moc-field [control]='username'
                [placeholder]='"component.forget_password.email_address_placeholder" | translate'
