--- a/mocker-front/src/app/component/general/component/general/general.component.html
+++ b/mocker-front/src/app/component/general/component/general/general.component.html
@@ -1,4 +1,4 @@
-<div id='main' class='view-port-width-standard mx-auto text-sm'>
+<div id='main' class='viewport-width-standard mx-auto text-sm'>
   <moc-description class='mt-5' [description]='"component.general.introduction" | translate'></moc-description>
   <moc-table-detail [table]='formGroup.controls.table' class='mt-16'></moc-table-detail>
   <hr class='mt-5'/>
