--- a/mocker-front/src/app/component/general/general-layout.component.html
+++ b/mocker-front/src/app/component/general/general-layout.component.html
@@ -1,6 +1,6 @@
 <moc-navigation></moc-navigation>
 <router-outlet></router-outlet>
-<div class='view-port-width-standard mx-auto text-sm'>
+<div class='viewport-width-standard mx-auto text-sm'>
   <moc-instruction></moc-instruction>
   <moc-change-log></moc-change-log>
   <moc-copyright></moc-copyright>
