--- a/mocker-front/src/app/component/project/component/projects/projects.component.html
+++ b/mocker-front/src/app/component/project/component/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div id='main' class='view-port-width-standard mx-auto text-sm'>
+<div id='main' class='viewport-width-standard mx-auto text-sm'>
   <p class='text-3xl font-medium mt-5'>{{ 'component.projects.my_projects' | translate }}</p>
   <moc-description class='mt-5' [description]='"component.projects.information" | translate'></moc-description>
   <moc-button routerLink='new' [label]='"component.projects.create" | translate' selfClass='uppercase btn-primary'
