--- a/mocker-front/src/app/component/schema/component/schema/schema.component.html
+++ b/mocker-front/src/app/component/schema/component/schema/schema.component.html
@@ -1,4 +1,4 @@
-<div id='main' class='view-port-width-standard mx-auto text-sm'>
+<div id='main' class='viewport-width-standard mx-auto text-sm'>
   <moc-table class='mt-20'></moc-table>
   <moc-table class='mt-20'></moc-table>
   <moc-table class='mt-20'></moc-table>
