--- a/mocker-front/src/app/component/schema/component/schemas/schemas.component.html
+++ b/mocker-front/src/app/component/schema/component/schemas/schemas.component.html
@@ -1,4 +1,4 @@
-<div id='main' class='view-port-width-standard mx-auto text-sm'>
+<div id='main' class='viewport-width-standard mx-auto text-sm'>
   <p class='text-3xl font-medium mt-5'>{{ 'component.schemas.my_schemas' | translate }}</p>
   <moc-description class='mt-5' [description]='"component.schemas.information" | translate'></moc-description>
   <moc-button routerLink='new' [label]='"component.schemas.create" | translate' selfClass='uppercase btn-primary'
