--- a/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -28,7 +28,7 @@
           <img [src]='avatarUrl' alt='avatar' class='icon rounded-full'/>
         </div>
         <ng-template #header>
-          <div class='bg-blue-bold px-4 py-2.5 flex items-center text-white text-sm'>
+          <div class='bg-blue-solid px-4 py-2.5 flex items-center text-white text-sm'>
             <div class='w-7 h-7 bg-white flex justify-center items-center rounded-full'>
               <img [src]='avatarUrl' alt='avatar' class='w-6 h-6 rounded-full'/>
             </div>
