--- a/mocker-front/src/app/component/people/component/person/person.component.html
+++ b/mocker-front/src/app/component/people/component/person/person.component.html
@@ -1,7 +1,7 @@
-<div id='main' class='view-port-width-standard mx-auto text-sm'>
+<div id='main' class='viewport-width-standard mx-auto text-sm'>
   <p class='text-3xl font-medium mt-5'>{{ 'component.person.my_account' | translate }}</p>
   <div class='mt-5 flex justify-between'>
-    <div class='p-5 panel border rounded'>
+    <div class='p-5 w-49/100 border rounded'>
       <p class='font-medium'>{{ 'component.person.my_email' | translate }}</p>
       <moc-field type='email' [control]='formGroup.controls.username' class='mt-5'></moc-field>
       <p *ngIf='isExistedUsername'
@@ -10,21 +10,21 @@
                   selfClass='w-28 {{ formGroup.controls.username.value === user.username ? "btn-light" : "btn-primary" }}'
                   label='component.person.save'></moc-button>
     </div>
-    <div class='p-5 panel border rounded'>
+    <div class='p-5 w-49/100 border rounded'>
       <p class='font-medium'>{{ 'component.person.my_password' | translate }}</p>
       <moc-button (click)='changePassword()' class='mt-3' selfClass='w-52 btn-primary'
                   label='component.person.change_password'></moc-button>
     </div>
   </div>
   <div class='mt-5 flex justify-between'>
-    <div class='p-5 panel border rounded'>
+    <div class='p-5 w-49/100 border rounded'>
       <p class='font-medium'>{{ 'component.person.my_api_key' | translate }}</p>
       <moc-field [control]='formGroup.controls.apiKey' class='mt-5'></moc-field>
       <p class='mt-3'>{{ 'You have used 0 of the maximum requests allowed by the free tier in the last 24 hours.' }}</p>
       <moc-button class='mt-8 text-right' selfClass='w-52 btn-primary'
                   label='component.person.generate_new_api_key'></moc-button>
     </div>
-    <div class='p-5 panel border rounded'>
+    <div class='p-5 w-49/100 border rounded'>
       <p class='font-medium'>{{ 'component.person.my_plan' | translate }}</p>
       <p class='mt-5'><b>Free</b> - 1,000 rows/download - Free</p>
       <moc-button class='mt-20 text-right' selfClass='w-36 btn-primary'
@@ -32,14 +32,14 @@
     </div>
   </div>
   <div class='mt-5 flex justify-between'>
-    <div class='p-5 panel border rounded'>
+    <div class='p-5 w-49/100 border rounded'>
       <p class='font-medium'>{{ 'component.person.delete_my_account' | translate }}</p>
       <p
         class='mt-3'>{{ 'If you delete your account, all of your data will be lost forever. Proceed with caution!' }}</p>
       <moc-button class='mt-8 text-right' selfClass='w-52 text-white bg-red uppercase'
                   label='component.person.delete_my_account'></moc-button>
     </div>
-    <div class='p-5 panel border rounded'>
+    <div class='p-5 w-49/100 border rounded'>
       <p class='font-medium'>{{ 'component.person.my_payments' | translate }}</p>
       <p class='mt-3'>{{ 'Here are all the payments that you have made for Mockaroo:' }}</p>
       <moc-description class='mt-3' description='You have not made any payments.'></moc-description>
