MOC-21: [FE] Adapt UI for ModalProvider.

--- a/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
+++ b/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
@@ -1,4 +1,4 @@
-<div id='main' dialog [modal]='this'>
+<div id='main' popup [modal]='this'>
   <div class='text-sm p-5' [formGroup]='formGroup'>
     <p class='text-center font-bold text-gray-600'>{{ 'modal.change_password.title' | translate }}</p>
     <img class='w-32 mt-4 mx-auto' src='assets/png/auth/change_password.png' alt='change_password'/>
