--- a/mocker-front/src/app/component/auth/modal/verification/verification.modal.html
+++ b/mocker-front/src/app/component/auth/modal/verification/verification.modal.html
@@ -1,4 +1,4 @@
-<div id='main' class='dialog'>
+<div id='main' popup [modal]='this' [dialog]='true'>
   <div class='text-sm'>
     <p class='text-center text-gray-600 font-bold mt-4'>{{ 'modal.verification.check_email' | translate }}</p>
     <img class='w-32 mt-4 mx-auto' src='assets/png/auth/email.svg' alt='email'/>
