--- a/mocker-front/src/app/shared/modal/choose-type/choose-type.modal.html
+++ b/mocker-front/src/app/shared/modal/choose-type/choose-type.modal.html
@@ -1,4 +1,4 @@
-<div id='main' dialog [modal]='this'>
+<div id='main' popup [modal]='this'>
   <div class='p-3 text-sm'>
     <div class='flex justify-between items-center'>
       <p class='font-medium'>{{ 'modal.choose_type.title' | translate }}</p>
