--- a/mocker-front/src/app/shared/modal/preview/preview.modal.html
+++ b/mocker-front/src/app/shared/modal/preview/preview.modal.html
@@ -1,4 +1,4 @@
-<div id='main' dialog [modal]='this'>
+<div id='main' popup [modal]='this'>
   <div class='text-sm p-5'>
     <p class='font-medium text-lg'>{{ 'modal.preview.title' | translate }}</p>
     <moc-tab [tabs]='tabs' selfClass='text-center'>
