--- a/mocker-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
+++ b/mocker-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
@@ -1,23 +1,25 @@
-<div id='main' class='dialog'>
-  <div class='form'>
-    <p class='font-bold'>{{ options.title | uppercase }}</p>
-    <div class='body text-sm text-justify mt-5'>{{ options.body }}</div>
-    <div class='body text-sm text-justify mt-3' [innerHTML]='options.detail'></div>
-    <div class='flex justify-between items-center mt-5'>
-      <div class='flex'>
-        <p class='w-3 h-3 rounded-full bg-red'></p>
-        <p class='w-3 h-3 ml-3 rounded-full bg-yellow'></p>
-        <p class='w-3 h-3 ml-3 rounded-full bg-green'></p>
-      </div>
-      <div class='flex justify-end -mr-3'>
-        <button (click)='modalInstance.close(false)' *ngIf='options.btnCancel'
-                class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-2 mr-3'
-                type='button'>Cancel
-        </button>
-        <button (click)='modalInstance.close(true)' *ngIf='options.btnOk'
-                class='bg-blue text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'
-                type='button'>OK
-        </button>
+<div id='main' popup [modal]='this' [dialog]='true'>
+  <div class='w-150 flex justify-between pt-10 px-5 pb-5 overflow-hidden'>
+    <div class='absolute top-0 left-0 bg-{{ color }} w-full h-1.5'></div>
+    <div class='w-1/5 text-center'>
+      <i [class]='icon'></i>
+    </div>
+    <div class='w-3/4'>
+      <p class='font-bold'>{{ options.title! | translate }}</p>
+      <div *ngIf='options.body' class='text-sm text-justify mt-5'>{{ options.body | translate }}</div>
+      <div *ngIf='!options.body' class='text-sm text-justify mt-5'>{{ options.detail }}</div>
+      <div class='flex flex-row-reverse mt-5'>
+        <div class='flex text-sm justify-end'>
+          <moc-button (click)='modalInstance.close(false)' *ngIf='isShowBtnCancel'
+                      selfClass='btn-light'
+                      label='modal.dialog.cancel'>
+          </moc-button>
+          <moc-button (click)='modalInstance.close(true)' *ngIf='isShowBtnOK'
+                      class='ml-1'
+                      selfClass='w-12 btn-primary bg-{{ color }}'
+                      label='modal.dialog.ok'>
+          </moc-button>
+        </div>
       </div>
     </div>
   </div>
