--- a/mocker-front/src/app/component/schema/component/schemas/schemas.component.html
+++ b/mocker-front/src/app/component/schema/component/schemas/schemas.component.html
@@ -2,7 +2,7 @@
   <p class='text-3xl font-medium mt-5'>{{ 'component.schemas.my_schemas' | translate }}</p>
   <moc-description class='mt-5' [description]='"component.schemas.information" | translate'></moc-description>
   <moc-button routerLink='new' [label]='"component.schemas.create" | translate' selfClass='uppercase btn-primary'
-              class='w-60 mt-6'></moc-button>
+              class='w-60 mt-6 inline-block'></moc-button>
   <table class='mt-10 w-full text-left'>
     <tr>
       <th><i (click)='selectAll()'
