--- a/mocker-front/src/app/shared/component/button/button.component.scss
+++ b/mocker-front/src/app/shared/component/button/button.component.scss
@@ -9,6 +9,10 @@
     @apply bg-white border text-black;
   }
 
+  .btn-red {
+    @apply bg-red border text-white;
+  }
+
   .invalid {
     border: 1px solid $invalid-color !important;
   }
