--- a/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mocker-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class='sticky top-0 z-10'>
   <header id='main' class='bg-white text-gray-800 flex text-sm justify-between items-center px-5'>
     <nav class='flex h-14'>
-      <a href='#' class='logo flex items-center mr-10 relative'>
+      <a routerLink='/' class='logo flex items-center mr-10 relative'>
         <img src='assets/png/logo.png' alt='logo' class='w-28'/>
       </a>
       <a *ngFor='let navigation of navigations'
