--- a/mocker-front/src/app/shared/component/table/table.component.html
+++ b/mocker-front/src/app/shared/component/table/table.component.html
@@ -1,11 +1,11 @@
 <div id='main' class='{{ class }} text-sm'>
   <div class='{{ selfClass }} border rounded w-72 overflow-hidden'>
-    <p class='bg-blue cursor-pointer h-8 heading text-center leading-8 font-medium text-white uppercase'>
+    <p (click)='openDetail()' class='bg-blue cursor-pointer h-8 heading text-center leading-8 font-medium text-white uppercase'>
       <i class='fa-regular fa-table mr-3'></i>
       {{ table.name }}
       <i class='edit-icon hidden ml-3 fa-solid fa-pen-to-square'></i>
     </p>
-    <div class='overflow-x-scroll'>
+    <div class='overflow-x-scroll pb-3'>
       <div class='px-5 mt-3 flex justify-between items-center'>
         <p class='w-1/12'>
           <i class='fa-solid fa-key text-yellow'></i>
@@ -13,23 +13,11 @@
         <p class='w-1/2'>{{ 'group' }}</p>
         <p class='w-1/3 uppercase'>{{ 'VARCHAR(20)' }}</p>
       </div>
-      <div class='px-5 mt-3 flex justify-between items-center'>
+      <div *ngFor='let field of table.fields' class='px-5 mt-3 flex justify-between items-center'>
         <p class='w-1/12'>
         </p>
-        <p class='w-1/2'>{{ 'number_id' }}</p>
-        <p class='w-1/3 uppercase'>{{ 'VARCHAR(20)' }}</p>
-      </div>
-      <div class='px-5 mt-3 flex justify-between items-center'>
-        <p class='w-1/12'>
-        </p>
-        <p class='w-1/2'>{{ 'group_number' }}</p>
-        <p class='w-1/3 uppercase'>{{ 'VARCHAR(20)' }}</p>
-      </div>
-      <div class='px-5 mt-3 flex justify-between items-center'>
-        <p class='w-1/12'>
-        </p>
-        <p class='w-1/2'>{{ 'group_id' }}</p>
-        <p class='w-1/3 uppercase'>{{ 'INT' }}</p>
+        <p class='w-1/2'>{{ field.name }}</p>
+        <p class='w-1/3 uppercase'>{{ field.sqlType.code || 'DEFAULT' }}</p>
       </div>
       <div class='px-5 mt-3 flex justify-between items-center'>
         <p class='w-1/12'>
