--- a/mocker-front/src/app/shared/component/copyright/copyright.component.html
+++ b/mocker-front/src/app/shared/component/copyright/copyright.component.html
@@ -1,4 +1,4 @@
-<div id='main' [class]='class + " text-center mt-20 mb-10 text-sm"'>
+<div id='main' [class]='class + " text-center mb-3 text-sm"'>
   <i class='fa-regular fa-copyright'></i>
   <span class='font-medium'> 2023 Mocker, LLC.
     | <a href='#' class='hover-underline-text-blue text-blue'>Terms of Use</a>
