--- a/mocker-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
+++ b/mocker-front/src/app/shared/modal/modal-provider/dialog/dialog.modal.html
@@ -1,4 +1,4 @@
-<div id='main' popup [modal]='this' [dialog]='true'>
+<div id='main' popup [modal]='this' [dialog]='true' class='!z-50'>
   <div class='w-150 flex justify-between pt-10 px-5 pb-5 overflow-hidden'>
     <div class='absolute top-0 left-0 bg-{{ color }} w-full h-1.5'></div>
     <div class='w-1/6'>
