--- a/mocker-front/src/app/shared/component/table/table.component.html
+++ b/mocker-front/src/app/shared/component/table/table.component.html
@@ -1,30 +1,19 @@
-<div id='main' class='{{ class }} text-sm'>
+<div id='main' class='{{ class }} text-sm z-10'>
   <div class='{{ selfClass }} border rounded w-72 overflow-hidden'>
-    <p (click)='openDetail()' class='bg-blue cursor-pointer h-8 heading text-center leading-8 font-medium text-white uppercase'>
+    <p class='bg-blue h-8 heading text-center leading-8 font-medium text-white uppercase'>
       <i class='fa-regular fa-table mr-3'></i>
       {{ table.name }}
-      <i class='edit-icon hidden ml-3 fa-solid fa-pen-to-square'></i>
+      <i (click)='openDetail()' class='edit-icon hidden ml-3 fa-solid fa-pen-to-square cursor-pointer'></i>
     </p>
-    <div class='overflow-x-scroll pb-3'>
-      <div class='px-5 mt-3 flex justify-between items-center'>
+    <div class='bg-white'>
+      <div *ngFor='let field of table.fields'
+           class='px-5 py-1.5 flex justify-between hover:bg-blue-light items-center'>
         <p class='w-1/12'>
-          <i class='fa-solid fa-key text-yellow'></i>
+          <!--          <i class='fa-regular fa-key'></i>-->
+          <!--          <i class='fa-solid fa-key text-yellow'></i>-->
         </p>
-        <p class='w-1/2'>{{ 'group' }}</p>
-        <p class='w-1/3 uppercase'>{{ 'VARCHAR(20)' }}</p>
-      </div>
-      <div *ngFor='let field of table.fields' class='px-5 mt-3 flex justify-between items-center'>
-        <p class='w-1/12'>
-        </p>
-        <p class='w-1/2'>{{ field.name }}</p>
+        <p class='w-1/2 cursor-pointer hover:font-medium' (click)='map.emit(field)'>{{ field.name }}</p>
         <p class='w-1/3 uppercase'>{{ field.sqlType.code || 'DEFAULT' }}</p>
-      </div>
-      <div class='px-5 mt-3 flex justify-between items-center'>
-        <p class='w-1/12'>
-          <i class='fa-regular fa-key'></i>
-        </p>
-        <p class='w-1/2'>{{ 'number_id' }}</p>
-        <p class='w-1/3 uppercase'>{{ 'DATE' }}</p>
       </div>
     </div>
   </div>
