--- a/mocker-front/src/app/shared/modal/toastr-provider/toastr/toastr.modal.html
+++ b/mocker-front/src/app/shared/modal/toastr-provider/toastr/toastr.modal.html
@@ -1,5 +1,5 @@
-<div id='main'
-     class='fixed left-10 text-sm bg-white rounded shadow-2xl w-96 h-40 {{ this.options && this.options.click ? "cursor-pointer" : "" }}'
+<div id='main' #element
+     class='fixed left-10 text-sm bg-white rounded shadow-2xl w-96 min-h-26 max-h-40 {{ this.options && this.options.click ? "cursor-pointer" : "" }}'
      [style.bottom]='bottom + "px"'
      [style.z-index]='zIndex'
      [style.opacity]='opacity'
@@ -11,8 +11,8 @@
     </div>
     <div class='w-9/12'>
       <p class='font-medium'>{{ options ? options.title : undefined }}</p>
-      <p
-        class='mt-2 text-justify' [innerHTML]='options ? options.body : undefined'></p>
+      <p *ngIf='options.body' class='mt-2 text-justify'>{{ (options ? (options.body | translate) : undefined) | truncate: 130 }}</p>
+      <p *ngIf='!options.body' class='mt-2 text-justify' [innerHTML]='options.detail'></p>
     </div>
     <div class='w-1/12 text-center'>
       <i (click)='toastrClose()' class='cursor-pointer fa-solid fa-xmark'></i>
